[package]
name = "global"
version = "0.4.1"
license = "MIT"
authors = ["Marko Mijalkovic <marko.mijalkovic97@gmail.com>"]

description = "Global variables without macros."
repository = "https://github.com/overdrivenpotato/global"
edition = "2018"

[dependencies]
parking_lot = "0.9.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "immutable"
harness = false
